fixed up bitrise.yml

--- a/bitrise.yml
+++ b/bitrise.yml
@@ -15,10 +15,10 @@ workflows:
           - pull_request: master
     - build_apk:
         filters:
-          - push: *
+          - push: "*"
     - run_tests :
         filters:
-          - branch: *
+          - branch: "*"
   build_apk:
     summary: Run your Android unit tests and create an APK file to install your app
       on a device or share it with your team.
